--- a/pages/templates/pages/contactus.html
+++ b/pages/templates/pages/contactus.html
@@ -3,8 +3,8 @@
 {%block content %}
 	<h1>Contact Us</h1>
 		<ul>
-			<li>Bill Zerega</li>
-			<li>Arsi Pansheria</li>
-			<li>Tom Shannon</li>
+			<li><a href="mailto:zerega85@gmail.com">Bill Zerega</a></li>
+			<li><a href="mailto:arsipansheria@gmail.com">Arsi Pansheria</a></li>
+			<li><a href="mailto:tomshannon58@gmail.com">Tom Shannon</a></li>
 		</ul>
 {% endblock content %}
