--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -12,7 +12,7 @@
 			<li><a href="{% url 'index' %}">Home</a></li>
 			<li><a href="{% url 'news' %}">News</a></li>
 			<li><a href="{% url 'contactus' %}">Contact</a></li>
-			<li><a href="about.asp">About</a></li>
+			<li><a href="{% url 'about' %}">About</a></li>
 		</ul>
 	</header>
 
@@ -24,7 +24,7 @@
 	{% endblock content %}
 
 	<footer>
-		TODO Footer
+		&reg; Penn State Great Valley
 	</footer>
 	
 </body>
