--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -1,10 +1,10 @@
-
+{% load static %}
 <!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Covid Traveler Warning</title>
-	
+	<link href="{% static 'main.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header id="header">
