--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -21,6 +21,15 @@
 	<h1>Welcome to COVID Traveler Warning</h1>
 	<h2>Where would you like to travel?</h2>
 
+	<form action="" method="post">
+		{%csrf_token%}
+		{{ form }}
+		<br>
+		<br>
+		<input type="submit">
+	</form>
+		
+
 	{% endblock content %}
 
 	<footer>
