Changes for stackplot graph and POC code for dynamic SQL
Changes for stackplot graph and POC code for dynamic SQL. I am checking in so I can update my local branch from the master.

--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -33,8 +33,8 @@
 	{% autoescape off %}
 
 		<p>
-			{{ county }}
 			<img src="{{ graph1|safe }}"/>
+			<img src="{{ graph2|safe }}"/>
 		</p>
 
 	{% endautoescape %}	
