--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+<link href="{% static '/css/normalize.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
 
 {%block content %}
@@ -8,7 +9,7 @@
 		<div class="results">
 			
 
-			<table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" class="fullWidth mainTable" style="background-color: #ffffff">
+			<table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" class="fullWidth mainTable">
 				<tr>
 						<td align="left" style="vertical-align:top;">
 							<table width="100%" align="left" cellpadding="0" cellspacing="0" border="0">
@@ -28,7 +29,14 @@
 								<td style="text-align: center"><img src="{% static 'images/maskRedhead.jpg' %}" class="tableImages" ></td>
 							</tr>
 							<tr>
-								<td class="table-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a ornare odio, quis faucibus eros. Nulla mattis leo non tellus tempus condimentum. Sed et felis mattis, dictum neque vitae, aliquam nunc. Phasellus a congue felis. Nunc malesuada, nunc sit amet efficitur finibus, mi nulla luctus ex, ut mattis eros augue gravida nisl. Sed fringilla dolor nibh, in semper augue malesuada eu. Nulla elementum blandit elit, a mattis arcu laoreet sed. Duis mi neque, iaculis ut ligula eget, dapibus dignissim turpis. Suspendisse maximus, mauris quis aliquet placerat, lectus tortor aliquam arcu, vel dignissim felis risus a tellus. Nullam at finibus massa, vel posuere dui. Suspendisse laoreet laoreet nulla, in interdum dui ullamcorper et. In rutrum urna non lacus fringilla, non porta massa consequat. Vivamus eu elementum sapien. Aenean auctor lacus nec sagittis efficitur. Aenean et ante in massa cursus imperdiet. Proin vitae sem quis arcu fringilla aliquet id vel ex.</td>
+								<td class="table-text">
+									
+									A new investigation showed that by mid-August, the death rate in those hospitalized with coronavirus-related illness had dropped from 25.6 percentage points to about 7.6 percentage points. Led by researchers at NYU Grossman School of Medicine, the study showed that a younger, healthier group of people were getting infected and were arriving at the hospital with less severe symptoms than those infected in the spring. <br><br>
+
+However, the researchers’ analysis showed that these factors accounted for only part of the improvement in survival. The rest, they suspect, resulted from healthcare providers’ growing experience with the coronavirus. For example, physicians learned that resting COVID-19 patients on their stomachs rather than their backs and delaying the use of ventilators as long as possible were more effective practices, say the study authors. Drugs likely helped as well. In addition, other factors such as decreasing hospital volumes, less exposure to infection, and earlier testing and treatment, may have played a role.<br><br>
+
+<a href="https://nyulangone.org/news/study-helps-explain-declines-death-rates-covid-19" target="_blank">Source</a>
+								</td>
 							</tr>
 						</table></td>
 										</tr>
@@ -48,7 +56,14 @@
 								<td style="text-align: center"><img src="{% static 'images/washhands.jpg' %}" class="tableImages"></td>
 							</tr>
 							<tr>
-								<td class="table-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a ornare odio, quis faucibus eros. Nulla mattis leo non tellus tempus condimentum. Sed et felis mattis, dictum neque vitae, aliquam nunc. Phasellus a congue felis. Nunc malesuada, nunc sit amet efficitur finibus, mi nulla luctus ex, ut mattis eros augue gravida nisl. Sed fringilla dolor nibh, in semper augue malesuada eu. Nulla elementum blandit elit, a mattis arcu laoreet sed. Duis mi neque, iaculis ut ligula eget, dapibus dignissim turpis. Suspendisse maximus, mauris quis aliquet placerat, lectus tortor aliquam arcu, vel dignissim felis risus a tellus. Nullam at finibus massa, vel posuere dui. Suspendisse laoreet laoreet nulla, in interdum dui ullamcorper et. In rutrum urna non lacus fringilla, non porta massa consequat. Vivamus eu elementum sapien. Aenean auctor lacus nec sagittis efficitur. Aenean et ante in massa cursus imperdiet. Proin vitae sem quis arcu fringilla aliquet id vel ex.</td>
+								<td class="table-text">Washing hands can keep you healthy and prevent the spread of respiratory and diarrheal infections from one person to the next. Germs can spread from other people or surfaces when you:
+									<ul>
+										<li>Touch your eyes, nose, and mouth with unwashed hands</li>
+										<li>Prepare or eat food and drinks with unwashed hands</li>
+										<li>Touch a contaminated surface or objects</li>
+										<li>Blow your nose, cough, or sneeze into hands and then touch other people’s hands or common objects</li>
+									</ul>
+									</td>
 							</tr>
 						</table>
 
