--- a/pages/templates/pages/contactus.html
+++ b/pages/templates/pages/contactus.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% load static %}
+<link href="{% static '/css/normalize.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
 {%block content %}
 	<h1>Contact Us</h1>
 		<ul>
