--- a/pages/templates/pages/newsarticles.html
+++ b/pages/templates/pages/newsarticles.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+<link href="{% static '/css/normalize.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
 
 
