--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -20,7 +20,7 @@
 	</header>
 
 	{% block content %}
-	<div class="main-div-outer" style="background-image: url('{% static '/images/usMap.jpg' %}')";>
+	<div class="main-div-outer" style="background-image: url('{% static '/images/usMapPins.jpg' %}')";>
 		
 		<div class="main-div-inner">
 
