--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -9,7 +9,7 @@
 		<div class="results">
 			
 
-			<table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" class="fullWidth mainTable">
+			<table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" class="fullWidth mainTable" style="background-color: #ffd166;">
 				<tr>
 						<td align="left" style="vertical-align:top;">
 							<table width="100%" align="left" cellpadding="0" cellspacing="0" border="0">
