working on updating form

--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -82,7 +82,8 @@ However, the researchers’ analysis showed that these factors accounted for onl
 					</tr>
 
 			</table>
-			
+			<img src="{{ graph3|safe }}"/>
+			<img src="{{ graph4|safe }}"/>
 	
 		</div>
 	</div>
