--- a/covidtraveler/templates/base.html
+++ b/covidtraveler/templates/base.html
@@ -52,4 +52,7 @@
 	</footer>
 	
 </body>
+
+<script src="{% static 'js/jquery.min.js' %}"type="text/javascript"}></script>
+<script src="{% static 'js/base.js' %}" type="text/javascript"}></script>
 </html>
