--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -17,6 +17,8 @@
 									<td align="left" style="vertical-align: top;"><table width="500" align="left" cellpadding="0" cellspacing="0" border="0" class="fullWidth">
 										<tr>
 											<td align="center" style="vertical-align:middle; padding:12px; font-family: Arial,Helvetica, sans-serif; font-size:18px; color: #000000;"> <img src="{{ graph1|safe }}"/>
+											 
+												{{ msg_text }} 
 
 											</td>
 										</tr>
