--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -6,6 +6,7 @@
 {%block content %}
 	{% autoescape off %}
 	<div class="results-outer">
+		
 		<div class="results">
 			
 
@@ -18,6 +19,7 @@
 										<tr>
 											<td align="center" style="vertical-align:middle; padding:12px; font-family: Arial,Helvetica, sans-serif; font-size:18px; color: #000000;"> <img src="{{ graph1|safe }}"/>
 											 
+												{{ current_state }}
 												{{ msg_text }} 
 
 											</td>
