--- a/pages/templates/pages/errorpage.html
+++ b/pages/templates/pages/errorpage.html
@@ -5,25 +5,22 @@
 
 {% block content %}
 
-<div class="main-div-outer" style="background-image: url('{% static '/images/usMapPins.jpg' %}')";>
+<div class="main-div-outer" style="background-image: url('{% static '/images/errorImage.png' %}')";>
 		
-    <div class="main-div-inner">
+    <div class="main-div-inner error">
 
-        <h1 class="headings">Welcome to COVID Traveler Warning</h1>
-            <h2 class="headings">No data for location provided : </h2>
+            <h2 class="headings">Something went wrong : </h2>
 
-            <form action="" method="post" class="forms">
+            
                 {%csrf_token%}
                 
                 {{ err_msg }}
                 <br>
                 <br>
                 <br>
-                <input type="submit">
-            </form>
-        <div class="main-div-inner-inner">
-            
-        </div>
+                
+            <a href="{% url 'index' %}"><button class="button1">Try Again</button></a>
+        
     </div>
 </div>	
 
