--- a/pages/templates/pages/search_results.html
+++ b/pages/templates/pages/search_results.html
@@ -8,7 +8,10 @@
 	<div class="results-outer">
 		
 		<div class="results">
-			
+			<div class="errorMessageSearchResults">
+												{{ msg_text }} <br><br>
+
+			</div>
 
 			<table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" class="fullWidth mainTable" style="background-color: #ffd166;">
 				<tr>
@@ -18,9 +21,6 @@
 									<td align="left" style="vertical-align: top;"><table width="500" align="left" cellpadding="0" cellspacing="0" border="0" class="fullWidth">
 										<tr>
 											<td align="center" style="vertical-align:middle; padding:12px; font-family: Arial,Helvetica, sans-serif; font-size:18px; color: #000000;"> <img src="{{ graph1|safe }}"/>
-											 
-												{{ current_state }}
-												{{ msg_text }} 
 
 											</td>
 										</tr>
